@@ -111,11 +111,6 @@ ListItem.Empty {
     property alias selectedIndex: list.currentIndex
 
     /*!
-      Called when the optionSelector is either expanded or collapsed.
-     */
-    signal scroll()
-
-    /*!
       Called when delegate is clicked.
      */
     signal delegateClicked(int index)
